solved minor ui bugs, added horz scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,16 @@
     @apply bg-background text-foreground;
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(100, 116, 139, 0.6);
+  border-radius: 8px;
+}
